--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,35 @@
-# For more information: https://laravel.com/docs/sail
 version: '3'
 services:
-    laravel.test:
-        build:
-            context: ./vendor/laravel/sail/runtimes/8.0
-            dockerfile: Dockerfile
-            args:
-                WWWGROUP: '${WWWGROUP}'
-        image: sail-8.0/app
+    laravel:
+        image: ambientum/php:7.3-nginx
         ports:
-            - '8080:80'
-        environment:
-            WWWUSER: '${WWWUSER}'
-            LARAVEL_SAIL: 1
+            - '8080:8080'
         volumes:
-            - '.:/var/www/html'
+            - '.:/var/www/app'
         networks:
-            - sail
+            - laravel
         depends_on:
             - pgsql
     pgsql:
-        image: 'postgres:13'
+        image: 'postgres'
         ports:
-            - '${FORWARD_DB_PORT:-5432}:5432'
+            - '5432:5432'
         environment:
-            PGPASSWORD: '${DB_PASSWORD:-secret}'
-            POSTGRES_DB: '${DB_DATABASE}'
-            POSTGRES_USER: '${DB_USERNAME}'
-            POSTGRES_PASSWORD: '${DB_PASSWORD:-secret}'
+            PGPASSWORD: 'secret'
+            POSTGRES_DB: 'boilerplate'
+            POSTGRES_USER: 'postgres'
+            POSTGRES_PASSWORD: 'secret'
         volumes:
-            - 'sailpgsql:/var/lib/postgresql/data'
+            - 'pgsql:/var/lib/postgresql/data'
         networks:
-            - sail
+            - laravel
         healthcheck:
-          test: ["CMD", "pg_isready", "-q", "-d", "${DB_DATABASE}", "-U", "${DB_USERNAME}"]
+          test: ["CMD", "pg_isready", "-q", "-d", "boilerplate", "-U", "postgres"]
           retries: 3
           timeout: 5s
 networks:
-    sail:
-        driver: bridge
+    laravel:
+      driver: bridge
 volumes:
-    sailpgsql:
-        driver: local
+    pgsql:
+      driver: local
