--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "cross-env": "^7.0",
         "laravel-mix": "^5.0.1",
         "resolve-url-loader": "^3.1.0",
-        "sass": "^1.15.2",
+        "sass": "~1.32.12",
         "sass-loader": "^8.0.0",
         "vue-template-compiler": "^2.6.11"
     }
